--- a/css/style.css
+++ b/css/style.css
@@ -4,4 +4,79 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Abel', sans-serif;
+    color: #fff;
+}
+
+body {
+    background: #000;
+}
+
+/* APP */
+.todo-app {
+    max-width: 1000px;
+    padding-top: 50px;
+    margin: 0 auto;
+}
+/* Header */
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header h1 {
+    font-size: 80px;
+}
+
+header img {
+    width: 300px;
+}
+
+/* Main */
+input {
+    width: 100%;
+    margin-bottom: 30px;
+    border: none;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 20px;
+    color: #000;
+    outline: none;
+    opacity: .5;
+    transition: opacity .3s;
+}
+
+input:hover,
+input:focus {
+    opacity: 1;
+}
+
+.todo-list li {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 30px;
+    border-bottom: 1px solid rgba(255, 255, 255, .4);
+    margin-bottom: 30px;
+}
+
+.todo-list li .text.completed {
+    text-decoration: line-through;
+}
+
+.todo-list li .text:hover {
+    cursor: pointer;
+}
+
+.todo-list li i {
+    opacity: .5;
+    transition: opacity .3s;
+}
+
+.todo-list li .text {
+    font-size: 18px;
+}
+
+.todo-list li i:hover {
+    cursor: pointer;
+    opacity: 1;
 }
